[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/trial.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/case_2/trial_day2/case2_end1.gd" type="Script" id=2]
[ext_resource path="res://sprites/background/alobby_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/character_scenes/character_sonya.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/character_scenes/character_masha.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/character_scenes/character_layton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/character_scenes/character_write.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/background/bpark_bg.png" type="Texture" id=9]
[ext_resource path="res://sprites/background/park_cutscene_bg.png" type="Texture" id=10]
[ext_resource path="res://sprites/background/hotel1_cutscene_bg.png" type="Texture" id=11]
[ext_resource path="res://sprites/background/hotel2_cutscene_bg.png" type="Texture" id=12]
[ext_resource path="res://sprites/background/hotel3_cutscene_bg.png" type="Texture" id=13]
[ext_resource path="res://scenes/character_scenes/character_mashasis.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "hotel3",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "park1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "hotel1",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "hotel2",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "park2",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back_ground" type="AnimatedSprite" parent="."]
position = Vector2( -174, 0 )
scale = Vector2( 0.502525, 0.502525 )
frames = SubResource( 1 )
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 5 )]
position = Vector2( 1, 115 )

[node name="character_masha" parent="characters_all" instance=ExtResource( 6 )]
visible = false
position = Vector2( 14.2705, 110.596 )

[node name="character_werur" parent="characters_all" instance=ExtResource( 8 )]
visible = false
position = Vector2( 0, 72 )

[node name="character_lentolna" parent="characters_all" instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, 56 )

[node name="character_sonya" parent="characters_all" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 64 )

[node name="character_zhekafem" parent="characters_all" instance=ExtResource( 14 )]
visible = false
position = Vector2( -11.7725, 195.088 )

[node name="verif" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Trial" parent="." instance=ExtResource( 1 )]

[connection signal="timeout" from="verif" to="." method="_on_verif_timeout"]
