extends Node2D
var Anims
var Dialogue
var Ev
var Music
var loc_file = ConfigFile.new()
func _ready():
	Anims = [
		"",
		"character_egorich default 6 октября. 8:30. Подвал. G",
		"Тёмыч: Мы быстро управились, не так ли? W",
		"character_egorich yee Егорыч: Определенно.",
		"Тёмыч: Этот гад ускользнул... Но ничего",
		"Он сам себя, в конце-концов, и угробит.",
		"И никто его уже не вытянет.",
		"character_egorich laugh Егорыч: Согласен. Такие люди долго не живут.",
		"character_masha win Маша: Блин, ребята, спасибо вам.",
		"Если бы не вы...",
		"character_masha default Вы, случайно, адвокатами стать не хотите?",
		"Может, поможете и мне с сестрой от отчима избавиться?",
		"character_egorich yee Тёмыч: Конечно. Егорыч, доставай Наган.",
		"character_masha what Маша: Эмм, не так избавиться...",
		"character_zhekafem default Жека: Он заслуживает и это!",
		"...Что такое 'Наган'?",
		"Тёмыч: Ох, это, девочка моя--",
		"character_masha blush Маша: Рано ей знать, что такое Наган.",
		"Тёмыч: Ну, как скажешь.",
		"(Однако, если верить этим двум, то понимание того, что такое Наган, Мурка и всех производных, уже не сильно навредит...) B",
		"(Что ей вообще не нравится в блатных песнях?)",
		"character_masha hey Маша: ...Давай я тебе лучше расскажу, что такое 'петушатня'? W",
		"Тёмыч: Ух, это уже, если позволите, без нас.",
		"character_masha HIDE А, Лентольна?",
		"character_lentoln default Е. Анатольевна: Дети, не забудьте, у нас на 10 экскурсия.",
		"Про вас двух я не знаю, конечно",
		"Но у вас тоже, наверняка, что-то будет.",
		"character_masha default Маша: Угу...",
		"Тёмыч: Где собираемся?",
		"character_lentoln default Е. Анатольевна: Я напишу в вайбере, угу...",
		"...",
		"character_lentoln HIDE Тёмыч: Я пошел, короче.",
		"background hotel2 6 октября. 9:00. Где-то. G",
		"Тёмыч: (Куда идем мы с пятачком?) B",
		"(Большой-большой секрет)",
		"(За копирайты не суди меня)",
		"(И нет, и нет, о нет!)",
		"(Ммм, если бы Мельница умела читать мои мысли...)",
		"(За нарушение её копирайтов, меня бы засудили.)",
		"(Хм, Соня...)",
		"character_sonya default Соня: Привет. Y",
		"Тёмыч: Виделись уже. W",
		"Эмм...",
		"character_sonya uh Соня: Что? Y",
		"Тёмыч: (Я не могу привыкнуть к тому, что она говорит больше 1 слова в час.) B",
		"(Мысль об этом застряет у меня в голове и я не в состоянии больше думать.)",
		"Кхм, так вот... W",
		"character_sonya order67 Соня: Ну что, говори уже... Y",
		"Тёмыч: Ты, это, не обиделась? W",
		"Соня: На что? Y",
		"Тёмыч: Ну, я, вроде, выиграл дело... W",
		"character_sonya anyways Соня: Мне обидно только за то, что Дашкерин *опять* ушел сухим из воды. Y",
		"А за остальное мне все равно.",
		"character_sonya default Тёмыч: (Когда проигрывал Аполлонов, он выедал мне мозги неделями.) B",
		"Ясно... W",
		"Ну... Я пошел.",
		"Соня: ...",
		"Тёмыч: (Я не знаю, кто этот Башим Дашкерин такой...) B",
		"(...Но я клянусь, что если карма предусмотрела момент, когда буква закона ущемит ему свободу)",
		"(То это произойдет не без моего непосредственного участия...)",
		"(И я очень хочу, чтобы вместе со мной, его окружил Егогорыч)",
		"(И она...)",
		"(Иначе, будет скучно.)",
		"(Плюс, не весело это, ловить преступников за патлы)",
		"(Без славной компашки...)",
		"(Как бы то ни было, еще одно дело идет в мою папочку...)",
		"(А я, тем временем, иду своей дорогой дальше...)",
		"OUT res://scenes/main_menu.tscn",
		"",
	]
	Music = [
		"",
		"6 октября. 8:30. Подвал. G",
		"START peaceful_day Тёмыч: Мы быстро управились, не так ли? W",
		"Егорыч: Определенно.",
		"Тёмыч: Этот гад ускользнул... Но ничего",
		"Он сам себя, в конце-концов, и угробит.",
		"И никто его уже не вытянет.",
		"Егорыч: Согласен. Такие люди долго не живут.",
		"Маша: Блин, ребята, спасибо вам.",
		"Если бы не вы...",
		"Вы, случайно, адвокатами стать не хотите?",
		"Может, поможете и мне с сестрой от отчима избавиться?",
		"Тёмыч: Конечно. Егорыч, доставай Наган.",
		"Маша: Эмм, не так избавиться...",
		"Жека: Он заслуживает и это!",
		"...Что такое 'Наган'?",
		"Тёмыч: Ох, это, девочка моя--",
		"Маша: Рано ей знать, что такое Наган.",
		"Тёмыч: Ну, как скажешь.",
		"(Однако, если верить этим двум, то понимание того, что такое Наган, Мурка и всех производных, уже не сильно навредит...) B",
		"(Что ей вообще не нравится в блатных песнях?)",
		"Маша: ...Давай я тебе лучше расскажу, что такое 'петушатня'? W",
		"Тёмыч: Ух, это уже, если позволите, без нас.",
		"А, Лентольна?",
		"Е. Анатольевна: Дети, не забудьте, у нас на 10 экскурсия.",
		"Про вас двух я не знаю, конечно",
		"Но у вас тоже, наверняка, что-то будет.",
		"Маша: Угу...",
		"Тёмыч: Где собираемся?",
		"Е. Анатольевна: Я напишу в вайбере, угу...",
		"...",
		"Тёмыч: Я пошел, короче.",
		"6 октября. 9:00. Где-то. G",
		"Тёмыч: (Куда идем мы с пятачком?) B",
		"(Большой-большой секрет)",
		"(За копирайты не суди меня)",
		"(И нет, и нет, о нет!)",
		"(Ммм, если бы Мельница умела читать мои мысли...)",
		"(За нарушение её копирайтов, меня бы засудили.)",
		"(Хм, Соня...)",
		"Соня: Привет. Y",
		"Тёмыч: Виделись уже. W",
		"Эмм...",
		"Соня: Что? Y",
		"Тёмыч: (Я не могу привыкнуть к тому, что она говорит больше 1 слова в час.) B",
		"(Мысль об этом застряет у меня в голове и я не в состоянии больше думать.)",
		"Кхм, так вот... W",
		"Соня: Ну что, говори уже... Y",
		"Тёмыч: Ты, это, не обиделась? W",
		"Соня: На что? Y",
		"Тёмыч: Ну, я, вроде, выиграл дело... W",
		"Соня: Мне обидно только за то, что Дашкерин *опять* ушел сухим из воды. Y",
		"А за остальное мне все равно.",
		"Тёмыч: (Когда проигрывал Аполлонов, он выедал мне мозги неделями.) B",
		"Ясно... W",
		"Ну... Я пошел.",
		"Соня: ...",
		"Тёмыч: (Я не знаю, кто этот Башим Дашкерин такой...) B",
		"(...Но я клянусь, что если карма предусмотрела момент, когда буква закона ущемит ему свободу)",
		"(То это произойдет не без моего непосредственного участия...)",
		"(И я очень хочу, чтобы вместе со мной, его окружил Егогорыч)",
		"(И она...)",
		"(Иначе, будет скучно.)",
		"(Плюс, не весело это, ловить преступников за патлы)",
		"(Без славной компашки...)",
		"(Как бы то ни было, еще одно дело идет в мою папочку...)",
		"(А я, тем временем, иду своей дорогой дальше...)",
		"OUT res://scenes/main_menu.tscn",
		"",
	]
	Dialogue = [
		"",
		"6 октября. 8:30. Подвал. G",
		"Тёмыч: Мы быстро управились, не так ли? W",
		"Егорыч: Определенно.",
		"Тёмыч: Этот гад ускользнул... Но ничего",
		"Он сам себя, в конце-концов, и угробит.",
		"И никто его уже не вытянет.",
		"Егорыч: Согласен. Такие люди долго не живут.",
		"Маша: Блин, ребята, спасибо вам.",
		"Если бы не вы...",
		"Вы, случайно, адвокатами стать не хотите?",
		"Может, поможете и мне с сестрой от отчима избавиться?",
		"Тёмыч: Конечно. Егорыч, доставай Наган.",
		"Маша: Эмм, не так избавиться...",
		"Жека: Он заслуживает и это!",
		"...Что такое 'Наган'?",
		"Тёмыч: Ох, это, девочка моя--",
		"Маша: Рано ей знать, что такое Наган.",
		"Тёмыч: Ну, как скажешь.",
		"(Однако, если верить этим двум, то понимание того, что такое Наган, Мурка и всех производных, уже не сильно навредит...) B",
		"(Что ей вообще не нравится в блатных песнях?)",
		"Маша: ...Давай я тебе лучше расскажу, что такое 'петушатня'? W",
		"Тёмыч: Ух, это уже, если позволите, без нас.",
		"А, Лентольна?",
		"Е. Анатольевна: Дети, не забудьте, у нас на 10 экскурсия.",
		"Про вас двух я не знаю, конечно",
		"Но у вас тоже, наверняка, что-то будет.",
		"Маша: Угу...",
		"Тёмыч: Где собираемся?",
		"Е. Анатольевна: Я напишу в вайбере, угу...",
		"...",
		"Тёмыч: Я пошел, короче.",
		"6 октября. 9:00. Где-то. G",
		"Тёмыч: (Куда идем мы с пятачком?) B",
		"(Большой-большой секрет)",
		"(За копирайты не суди меня)",
		"(И нет, и нет, о нет!)",
		"(Ммм, если бы Мельница умела читать мои мысли...)",
		"(За нарушение её копирайтов, меня бы засудили.)",
		"(Хм, Соня...)",
		"Соня: Привет. Y",
		"Тёмыч: Виделись уже. W",
		"Эмм...",
		"Соня: Что? Y",
		"Тёмыч: (Я не могу привыкнуть к тому, что она говорит больше 1 слова в час.) B",
		"(Мысль об этом застряет у меня в голове и я не в состоянии больше думать.)",
		"Кхм, так вот... W",
		"Соня: Ну что, говори уже... Y",
		"Тёмыч: Ты, это, не обиделась? W",
		"Соня: На что? Y",
		"Тёмыч: Ну, я, вроде, выиграл дело... W",
		"Соня: Мне обидно только за то, что Дашкерин *опять* ушел сухим из воды. Y",
		"А за остальное мне все равно.",
		"Тёмыч: (Когда проигрывал Аполлонов, он выедал мне мозги неделями.) B",
		"Ясно... W",
		"Ну... Я пошел.",
		"Соня: ...",
		"Тёмыч: (Я не знаю, кто этот Башим Дашкерин такой...) B",
		"(...Но я клянусь, что если карма предусмотрела момент, когда буква закона ущемит ему свободу)",
		"(То это произойдет не без моего непосредственного участия...)",
		"(И я очень хочу, чтобы вместе со мной, его окружил Егогорыч)",
		"(И она...)",
		"(Иначе, будет скучно.)",
		"(Плюс, не весело это, ловить преступников за патлы)",
		"(Без славной компашки...)",
		"(Как бы то ни было, еще одно дело идет в мою папочку...)",
		"(А я, тем временем, иду своей дорогой дальше...)",
		"OUT res://scenes/main_menu.tscn",
		"",
	]
	loc_file.load("C:/Games/ddkg2.save")
	loc_file.set_value("Locations","Last",filename)
	loc_file.save("C:/Games/ddkg2.save")
	$characters_all/character_masha/desk.free()

func _process(_delta):
	if $Trial.Cur == 57:
		$back_ground.free()
